--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ola Mundo!</h1>
-    <p>texto</p>
-    <p>texto2</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi maiores quae consequatur architecto vitae soluta sint delectus placeat possimus? Ipsum, suscipit. Quaerat delectus eaque laboriosam, quibusdam necessitatibus molestiae tenetur esse?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque accusamus ratione quo deserunt ab. Totam maxime rem, quod architecto ab, ad suscipit blanditiis nobis illo asperiores similique, atque doloribus ex.</p>
 </body>
 </html>
